# antiguru

./: .gitignore  .pre-commit-config.yaml  README.md  TODO  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: cli.py  config.py  db.py  main.py  models.py  repositories.py
app/api/: deps.py  routes.py  schemas.py
app/domain/: enums.py  exceptions.py
app/integrations/: bank_client.py
app/services/: payment_service.py
docs/: db_schema.md
tests/: test_api.py  test_payment_service.py
